{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 82,
  "lineage": "ea530fab-610b-f086-b3a2-4363a8c881e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be762e3a6615fd5d",
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0be762e3a6615fd5d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-202-128-125.compute-1.amazonaws.com",
            "public_ip": "34.202.128.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my-assessment-igw",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-assessment-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:internet-gateway/igw-0c158f97077ee0a08",
            "id": "igw-0c158f97077ee0a08",
            "owner_id": "468606809861",
            "tags": {
              "Environment": "dev",
              "Name": "interview-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-igw"
            },
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be762e3a6615fd5d",
            "connectivity_type": "public",
            "id": "nat-07c88b446d15a26ba",
            "network_interface_id": "eni-0e178b2fbc32a1314",
            "private_ip": "10.0.1.14",
            "public_ip": "34.202.128.125",
            "subnet_id": "subnet-0065ced2e83beb82a"
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_internet_gateway.my-assessment-igw",
            "aws_subnet.public",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b071c5d7f72a45381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07c88b446d15a26ba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b071c5d7f72a4538",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_internet_gateway.my-assessment-igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c158f97077ee0a08",
            "id": "r-rtb-074543b672d388da91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074543b672d388da9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-assessment-igw",
            "aws_route_table.public",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:route-table/rtb-0b071c5d7f72a4538",
            "id": "rtb-0b071c5d7f72a4538",
            "owner_id": "468606809861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "interview-private-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:route-table/rtb-074543b672d388da9",
            "id": "rtb-074543b672d388da9",
            "owner_id": "468606809861",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "interview-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c68c4b21ca86772f",
            "route_table_id": "rtb-074543b672d388da9",
            "subnet_id": "subnet-019eb7ea27dc209b7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.private",
            "aws_vpc.my-assessment-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d3f623186387ad",
            "route_table_id": "rtb-074543b672d388da9",
            "subnet_id": "subnet-040b2013bb5ae8a93"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.private",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2dd5c2fceb7981a",
            "route_table_id": "rtb-074543b672d388da9",
            "subnet_id": "subnet-0065ced2e83beb82a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.my-assessment-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc58e24cbdc1ca05",
            "route_table_id": "rtb-074543b672d388da9",
            "subnet_id": "subnet-0d6b827dd72456b82"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:security-group/sg-01b2dc7f4deef0f8b",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b2dc7f4deef0f8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00d8f144a59d6333d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_security_group",
            "name_prefix": "",
            "owner_id": "468606809861",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:security-group/sg-00d8f144a59d6333d",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d8f144a59d6333d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "468606809861",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:security-group/sg-0148b1207984082c2",
            "description": "Allows inbound access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0148b1207984082c2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b2dc7f4deef0f8b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "468606809861",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs",
            "aws_security_group.load-balancer",
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:subnet/subnet-019eb7ea27dc209b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019eb7ea27dc209b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468606809861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "interview-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-private-subnet-1"
            },
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:subnet/subnet-040b2013bb5ae8a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040b2013bb5ae8a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468606809861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "interview-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-private-subnet-2"
            },
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:subnet/subnet-0065ced2e83beb82a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0065ced2e83beb82a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468606809861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "interview-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-public-subnet-1"
            },
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:subnet/subnet-0d6b827dd72456b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b827dd72456b82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468606809861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "interview-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-public-subnet-2"
            },
            "vpc_id": "vpc-034ddf788f6c02000"
          },
          "dependencies": [
            "aws_vpc.my-assessment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-assessment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468606809861:vpc/vpc-034ddf788f6c02000",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd45e7cc51bf2751",
            "default_route_table_id": "rtb-07bceb29939dc58e7",
            "default_security_group_id": "sg-0298da4ff3264118a",
            "dhcp_options_id": "dopt-08480903c7150bb27",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034ddf788f6c02000",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07bceb29939dc58e7",
            "owner_id": "468606809861",
            "tags": {
              "Environment": "dev",
              "Name": "interview-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "interview-vpc"
            }
          }
        }
      ]
    }
  ]
}